crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__import-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"import { var1 var2 \\\"unclosed\"))"
---
(
    Some(
        [
            (
                Import(
                    (
                        false,
                        0..6,
                    ),
                    (
                        "import",
                        0..6,
                    ),
                    (
                        ImportSpecific(
                            [
                                (
                                    "var1",
                                    9..13,
                                ),
                                (
                                    "var2",
                                    14..18,
                                ),
                            ],
                        ),
                        7..18,
                    ),
                    (
                        "from",
                        19..18,
                    ),
                    (
                        "unclosed",
                        19..28,
                    ),
                ),
                0..28,
            ),
        ],
    ),
    [
        found '"var2"' at 14..18 expected '","',
        found '"\""' at 19..20 expected '","', or '"}"',
        found '"\""' at 19..20 expected something else, or '"from"',
        found end of input at 28..28 expected any, or '"\""',
    ],
)
