crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__import-8.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"import\"))"
---
(
    Some(
        [
            (
                Import(
                    (
                        false,
                        0..6,
                    ),
                    (
                        "import",
                        0..6,
                    ),
                    (
                        ImportAll,
                        6..6,
                    ),
                    (
                        "from",
                        6..6,
                    ),
                    (
                        "",
                        6..6,
                    ),
                ),
                0..6,
            ),
        ],
    ),
    [
        found end of input at 6..6 expected '"*"', or '"{"',
        found end of input at 6..6 expected something else, or '"from"',
        found end of input at 6..6 expected something else, or '"\""',
    ],
)
