crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__import-9.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"import {\"))"
---
(
    Some(
        [
            (
                Import(
                    (
                        false,
                        0..6,
                    ),
                    (
                        "import",
                        0..6,
                    ),
                    (
                        ImportSpecific(
                            [],
                        ),
                        7..8,
                    ),
                    (
                        "from",
                        8..8,
                    ),
                    (
                        "",
                        8..8,
                    ),
                ),
                0..8,
            ),
        ],
    ),
    [
        found end of input at 8..8 expected any, or '"}"',
        found end of input at 8..8 expected something else, or '"from"',
        found end of input at 8..8 expected something else, or '"\""',
    ],
)
