crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__import.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"import * from \\\"path/to/module\\\"\"))"
---
[
    (
        Import(
            (
                false,
                0..6,
            ),
            (
                "import",
                0..6,
            ),
            (
                ImportAll,
                7..8,
            ),
            (
                "from",
                9..13,
            ),
            (
                "path/to/module",
                14..30,
            ),
        ),
        0..30,
    ),
]
