crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"fail\"))"
---
[
    (
        Statement(
            (
                Fail(
                    (
                        "fail",
                        0..4,
                    ),
                    None,
                ),
                0..4,
            ),
        ),
        0..4,
    ),
]
