crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"fail 1\"))"
---
[
    (
        Statement(
            (
                Fail(
                    (
                        "fail",
                        0..4,
                    ),
                    Some(
                        (
                            Number(
                                (
                                    1.0,
                                    5..6,
                                ),
                            ),
                            5..6,
                        ),
                    ),
                ),
                0..6,
            ),
        ),
        0..6,
    ),
]
