crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"echo 1\"))"
---
[
    (
        Statement(
            (
                Echo(
                    (
                        "echo",
                        0..4,
                    ),
                    (
                        Number(
                            (
                                1.0,
                                5..6,
                            ),
                        ),
                        5..6,
                    ),
                ),
                0..6,
            ),
        ),
        0..6,
    ),
]
