crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"return\"))"
---
[
    (
        Statement(
            (
                Return(
                    (
                        "return",
                        0..6,
                    ),
                    None,
                ),
                0..6,
            ),
        ),
        0..6,
    ),
]
