crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"return 1\"))"
---
[
    (
        Statement(
            (
                Return(
                    (
                        "return",
                        0..6,
                    ),
                    Some(
                        (
                            Number(
                                (
                                    1.0,
                                    7..8,
                                ),
                            ),
                            7..8,
                        ),
                    ),
                ),
                0..8,
            ),
        ),
        0..8,
    ),
]
